Fix black box too large on mobile

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -38,5 +38,8 @@
 .description p {
   font-family: Lato, sans-serif;
   font-weight: 700;
-  font-size: $font-size-3;
+  font-size: $font-size-2;
+  @include desktop{
+    font-size: $font-size-3;
+  }
 }
