--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -102,8 +102,8 @@
     font-weight: 50;
     background-color: $primary-dark;
     color: white;
-    padding: 1rem 0;
     width: 30rem;
+    max-width: 80vw;
     padding: 1rem;
   }
 }
